# algebraic-edge-graphs

./: .gitignore  CHANGELOG.md  LICENSE  README.md  algebraic-edge-graphs.cabal
.github/workflows/: ci.yml
bench/: Bench.hs
src/: EdgeGraph.hs
src/EdgeGraph/: AdjacencyMap.hs  Class.hs  Fold.hs  Incidence.hs  IntAdjacencyMap.hs
src/EdgeGraph/AdjacencyMap/: Internal.hs
src/EdgeGraph/HigherKinded/: Class.hs
src/EdgeGraph/Incidence/: Internal.hs
src/EdgeGraph/IntAdjacencyMap/: Internal.hs
test/: Arbitrary.hs  Main.hs
test/EdgeGraph/: Test.hs
test/EdgeGraph/Test/: AdjacencyMap.hs  Arbitrary.hs  EdgeGraph.hs  Fold.hs  Incidence.hs  IntAdjacencyMap.hs
test/Test/: AdjacencyMap.hs  EdgeGraph.hs  Fold.hs  Incidence.hs  IntAdjacencyMap.hs
test/Testable/: AdjacencyGraph.hs  AlgebraicGraph.hs  Graph.hs  Instances.hs
